# PolyForm

./: CHANGELOG.md  Example_colab.ipynb  LICENSE  README (1).md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: quickstart.py
manuscript/: figure_1.py  figure_2.py  pr2c00034_si_002 (1).xlsx  support_mode.py  topology_1.py  topology_2.py  weight_mode.py
src/polyform/: __init__ (1).py  __init__.py  cli.py  core.py  support_mode.py  topology.py  weight_mode.py
