[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# NOTE: the PyPI *distribution* name is `polyform-lattice` because the plain
# name `polyform` is already taken by an unrelated project. The *import* name
# is still `polyform` (i.e. `import polyform`). To change the distribution
# name, edit the single `name` field below.
name = "polyform-lattice"
version = "0.1.0"
description = "Structured analysis of proteoform distributions on finite, bounded, k-graded modal lattices."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "James N. Cobley" }]
keywords = [
    "proteoform", "proteomics", "modal-lattice", "PTM", "top-down",
    "hamming", "topology", "occupancy", "mass-spectrometry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.urls]
Homepage = "https://github.com/JamesCobley/PolyForm"
Repository = "https://github.com/JamesCobley/PolyForm"
Issues = "https://github.com/JamesCobley/PolyForm/issues"

[project.scripts]
polyform = "polyform.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polyform"]

[tool.hatch.build.targets.sdist]
# keep the distributed source archive lean: ship the package + docs only,
# not the multi-megabyte manuscript data.
include = [
    "src/polyform",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
